# lar

./: CLAUDE.md  README.md  pyproject.toml  refs.bib  report.typ  results.json
datasets/: README.md  benchmark.jsonl
datasets/ai_generated/: access_control.p  architecture_layers.p  data_lineage.p  dependency_resolution.p  financial_audit.p  medical_diagnosis.p  ml_pipeline.p  network_routing.p  ontology_hierarchy.p  social_influence.p  supply_chain_network.p
datasets/tptp/: README.md  ancestor_recursive.p  bird_penguin.p  chain_depth_4.p  family_transitive.p  function_parent.p  independent_predicates.p  knights_knaves.p  likes_exists.p  modus_ponens.p  non_entailed_chain.p  non_entailed_simple.p  not_entailed_simple.p  query_with_function.p  socrates_mortal.p  tweety_penguin.p
datasets/tptp_fof/: lcl028+1.p  lcl061+1.p  lcl062+1.p  lcl063+1.p  lcl073+1.p  lcl109+1.p  lcl181+1.p  lcl230+1.p  puz005+1.p  puz031+1.p  puz047+1.p  puz060+1.p  puz061+1.p  puz128+1.p  syn001+1.p  syn036+1.p  syn040+1.p  syn041+1.p  syn044+1.p  syn045+1.p  syn046+1.p  syn047+1.p  syn048+1.p  syn049+1.p  syn050+1.p  syn051+1.p  syn052+1.p  syn053+1.p  syn054+1.p  syn055+1.p  syn056+1.p  syn057+1.p  syn058+1.p  syn059+1.p  syn060+1.p  syn061+1.p  syn062+1.p  syn063+1.p  syn064+1.p  syn065+1.p  (+10 more)
examples/: problem1.txt
results/: results_ai.json  results_ai_generated.json  results_tptp.json  results_tptp_fof.json
scripts/: download_tptp_fof.py  generate_benchmark_figures.py  generate_comparison_figures.py  generate_report_figures.py  run_benchmarks.py
src/lar/: __init__.py  benchmark.py  (+7 more)
(+3 files in other folders)
