[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lar-assignment1"
version = "0.1.0"
description = "Baseline and improved first-order resolution prover"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Student" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
lar-benchmark = "lar.benchmark:main"
